<resources>
    <string name="app_name">Makale Paylas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_google">GOOGLE İLE DEVAM ET</string>
    <string name="istege_gore_profil_resmi_seciniz">İsteğe göre profil resmi seçiniz*</string>
    <string name="profil_resmi_degisim">Profil resmi daha sonra değiştirilebilir.</string>
    <string name="bu_bilgiye_neden_ihtiyacimiz_var"> <u>Bu bilgiye neden ihtiyacımız var?</u> </string>
    <string name="isim_soyisim">İsim-soyisim</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="dogum_tarihi">Doğum tarihi</string>
    <string name="sonraki">Sonraki</string>
    <string name="paylasım_yapacak_mısınız">Paylaşım yapacak mısınız?</string>
    <string name="dogrulama_kodu">Doğrulama kodunu giriniz</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="indir">İNDİR</string>
    <string name="paylas">Paylaş</string>
    <string name="makale_basligi">Makale Başlığı</string>
    <string name="yazar_isim_soyad">Yazar: İsim Soyad</string>
    <string name="ornek_tarih">24.06.2024</string>
    <string name="hint_makale_ismi">Makale ismi</string>
    <string name="hint_makale_aciklamasi">Açıklama…</string>
    <string name="ornek_makale_ismi">Planck Sabiti Hakkında</string>
    <string name="ornek_yazar_ismi">Dimetileter</string>
    <string name="kullanici_ismini_degistir">Kullanıcı ismini değiştir</string>"
    <string name="profil_resmini_degistir">Profil resmini değiştir</string>
    <string name="koyu_mod">Koyu Mod</string>
    <string name="cikis">Çıkış</string>
    <string name="kaydedilenler">Kaydedilenler</string>
    <string name="neredeyse_hazir">Neredeyse hazır…</string>
    <string name="yukleme_bilgisi">Bu işlemin süresi internet bağlantınıza, cihazınıza ve profil resminizinçözünürlüğne
    göre uzun ya da kısa sürebilir.</string>
    <string name="toast_cikis_basarili">Çıkış başarılı</string>
    <string name="toast_cikis_basarisiz">Çıkış başarısız</string>"
    <string name="toast_giris_basarisiz">Giriş başarısız</string>
    <string name="toast_kayit_tamamla">Lütfen kaydınızı tamamlayınız. Yeni hesap girişi için geri tuşuna basınız.</string>
    <string name="toast_olarak_giris_yapiliyor">olarak giriş yapılıyor</string>
    <string name="snack_galeri_izni_gerekli">Glaeriye erişim için izin gerekli</string>
    <string name="snack_izin_ver">İzin ver</string>
    <string name="toast_izin_ayari_ac">Ayarlardan galeri erişim iznini açın</string>
    <string name="toast_bilgiler_bos_birakilamaz">Kullanici bilgileri boş bırakılamaz</string>
    <string name="toast_profil_resmi_yuklenmedi">Profil resmi eklenemedi. Daha sonra tekrar eklemeyi deneyin</string>
    <string name="toast_hesap_olusturulmadi">Hesap oluşturulamadı. Tekrar deneyin</string>
    <string name="toast_profil_resmi_degistirildi">Profil resmi değiştirildi</string>
    <string name="secim_yailmadi">Yüklenecek bir PDF dosyası seçiniz</string>
    <string name="yukleme_bilgilerini_giriniz">Paylaşım bilgileri eksik</string>
    <string name="hesap_olusturma_hatasi">Hesap oluşturulurken hata meydana geldi. Daha sonra tekrar deneyin :(</string>
    <string name="kayit_yok">Burası boş görünüyor :/</string>
    <string name="baglanti_yok">Bağlantı yok :(</string>>
    <string name="toast_yukleniyor">Yükleniyor…</string>
    <string name="toast_yuklendi">Yüklendi</string>
    <string name="toast_en_az_uc_kategori">En az 3 kategori seçin</string>
    <string name="toast_pdf_yuklenmedi">Pdf veritabanına yüklenmedi</string>
    <string name="toast_pdf_url_null">PDF bağlantısı alınamadı. Bu PDF hatalı olabilir. Daha sonra tekrar deneyin</string>
    <string name="toast_indirme_baslatildi">İndirme Başlatıldı</string>
    <string name="toast_kaydedildi">Kaydedildi</string>
    <string name="toast_kaydedilemedi">Kaydedilemedi!</string>
    <string name="toast_kayit_silme_basarili">Kaldırıldı</string>
    <string name="toast_hata">Hata!</string>
    <string name="toast_paylasim_yok">Herhangi paylaşım yok</string>
    <string name="pdf_baglantisini_paylas">Pdf Bağlantısını Paylaş</string>
    <string name="pdf_yukleme_bilgisi">Bu işlem bir kaç dakika sürebilir. Yükleme tamamlanırken uygulamayı kullanabilirsiniz</string>
    <string name="toast_pdf_yulendi_veri_yuklenmedi">"Pdf yüklendi ama bilgileri veri tabanına eklenmedi</string>
    <string name="toast_kullanici_adlari_ayni_degil">Kullanıcı isimleri uyuşmuyor</string>
    <string name="toast_bos_birakilamaz">Kullanıcı ismi girilmedi</string>
    <string name="toast_kullanici_adi_degistirildi">Kullanıcı adı değiştirildi</string>
    <string name="toast_permission_denied">İndirme yapabilmek için ayarlardan izinleri açın</string>
    <string name="toast_internet_baglantisi_yok">İnternet bağlantısı yok</string>
    <string name="toast_akis_yenilenmedi">Bağlantı yok. Akış yenilenmedi</string>
    <string name="toast_geri_al">Geri al</string>
    <string name="toast_pdf_erisimi_yok">Bu PDF dosyasına artık erişilemiyor</string>

    <string name="ornek">Enerjinin frekans ile çarpımı, Planck sabitiyle (h) çarpılarak bulunur. Yani, E = h * f formülünde,
    E enerjiyi, h Planck sabitini ve f ise frekansı temsil eder. Bu formül, bir fotonun enerjisinin frekansı ile doğru orantılı
    olduğunu gösterir. Yani, bir fotonun frekansı arttıkça, onun enerjisi de artar. Bu da klasik fiziğin dalga kuramıyla uyumlu
    bir şekilde düşünülebilir, çünkü frekans arttıkça dalga boyu kısalır ve enerji yoğunluğu artar. Ancak, E/f olarak ifade
    edilen bir değer Planck sabiti değildir. Planck sabiti (h), enerji ve frekans arasındaki ilişkiyi ifade eder, ancak sadece
    bir fotonun enerjisiyle değil. Bu nedenle, E/f olarak ifade edilen bir değer, Planck sabiti olarak kabul edilemez.
    Planck sabiti (h), temel bir doğal sabit olup, enerji ve frekans arasındaki ilişkiyi tanımlar. Ancak, sadece enerji birimi
    değil, enerji ve frekans arasındaki ilişkiyi temsil eden bir katsayıdır. Bu nedenle, Planck sabiti (h) ile frekansı bölerek
    doğrudan enerji birimini elde edemeyiz.</string>

    <string name="kullanici_aydinlatma_metni"> ºPlatformumuzda sağlanacak her türlü paylaşım ve ifade özgürdür ancak insanların
    daha iyi bir deneyim inşa etmesi için kullanıcılara doğru bilginin ve içeriğin sunulması son derece önemli. Bu sebeple
    paylaşım yapmak ve fikirlerini kitlelere ulaştırmak isteyen kullanıcıların güvenilir bilgiye sahip olmaları tarafımızca
    önemsenmektedir. Ayrıca, her ne kadar özgür bir platformda olsakta rastgele içeriklerin paylaşıldığı ve amacından tam
    anlamıyla sapmaya başlamış bir platforma dönüşmek istemeyiz. Veri akışının sağlanabilirliği ve güvenli bilginin paylaşıldığı
    bir ortam için çalışmaktayız.ºBu yaklaşım elbette ki fikir beyanında bulunmak isteyen kişilerin fikirlerini engellememektedir.
    Fikirlerini ve yazılarınızı her daim paylaşabilirsiniz. Fakat onaylanmış kullanıcılar işinde daha bilgili ve profesyonel
    olarak kabul edilmektedir; okurlar için bir takip sistemi oluşturmaktadır.</string>
    <string name="sil">Sil</string>
    <string name="vazgec">Vazgeç</string>
    <string name="bu_gonderi_kaldirilacak">Bu Gönderi kaldırılacak!</string>
    <string name="yeni_kullanici_adi">Yeni kullanıcı adı</string>
    <string name="yeni_kullanici_adi_tekrar">Yeni kullanıcı adı tekrar</string>
    <string name="onayla">Onayla</string>
    <string name="teoloji">Teoloji</string>
    <string name="kisisel">Kişisel</string>
    <string name="teknoloji">Teknoloji</string>
    <string name="akademik">Akademik</string>
    <string name="politik">Politik</string>
    <string name="elestiri">Eleştiri</string>
    <string name="felsefe">Felsefe</string>
    <string name="geri_bildirim_gonder">Geri bildirim gönder</string>
    <string name="gonder">Gönder</string>
    <string name="geri_bildirim_bilgi_metni">Geribildirim gönderildiğinde, daha doğru bir hata yönetimi için gönderilme tarihi ve kullanıcı ismi gibi bazı bilgiler de gönderilmektedir.</string>
</resources>