<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/fun_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/new_nickname_first"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/light_view_item"
            android:fontFamily="@font/jost_light"
            android:hint="@string/yeni_kullanici_adi"
            android:inputType="text|textCapSentences"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            android:textColorHint="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_nickname_second"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/light_view_item"
            android:fontFamily="@font/jost_light"
            android:hint="@string/yeni_kullanici_adi_tekrar"
            android:inputType="text|textCapSentences"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            android:textColorHint="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_nickname_first" />

        <Button
            android:id="@+id/new_nickname_cancel"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:background="@drawable/light_view_item"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/vazgec"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_nickname_second" />

        <Button
            android:id="@+id/new_nickname_okay"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="80dp"
            android:background="@drawable/next_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/onayla"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_nickname_second" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>